Change meaning of Escape key: goes back to Browse mode

BUG: 302898